--- a/videojsdemo.html
+++ b/videojsdemo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Custom Video.js Player</title>
+  <title>Custom Video.js Player with HLS Stream</title>
 
   <!-- Video.js Stylesheet -->
   <link href="https://vjs.zencdn.net/8.0.0/video-js.css" rel="stylesheet" />
@@ -12,8 +12,25 @@
   <!-- Video.js Script -->
   <script src="https://vjs.zencdn.net/8.0.0/video.min.js"></script>
 
+  <!-- Optional: Video.js HLS Plugin -->
+  <script src="https://cdn.jsdelivr.net/npm/videojs-http-streaming@2/dist/videojs-http-streaming.min.js"></script>
+
   <!-- Custom CSS for the Video.js player -->
   <style>
+    body {
+      margin: 0; /* Remove default margin */
+      height: 100vh; /* Full viewport height */
+      display: flex; /* Use flexbox for centering */
+      justify-content: center; /* Center horizontally */
+      align-items: center; /* Center vertically */
+      background-color: #000; /* Optional: dark background for better visibility */
+    }
+
+    .vjs-custom-skin {
+      max-width: 100%;
+      height: auto; /* Maintain aspect ratio */
+    }
+
     .vjs-custom-skin .vjs-control-bar {
       background-color: #333; /* Dark background for the control bar */
     }
@@ -28,22 +45,27 @@
     }
 
     /* Set custom width and height for the player */
-    .vjs-custom-skin {
-      max-width: 100%;
-      height: auto;
+    .video-container {
+      width: 640px; /* Fixed width */
+      height: 360px; /* Fixed height */
     }
   </style>
 </head>
 <body>
 
-  <!-- Video.js Player -->
-  <video id="my-player" class="video-js vjs-custom-skin" controls preload="auto" width="640" height="264" poster="https://via.placeholder.com/640x264.png" data-setup="{}">
-    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" />
-    <p class="vjs-no-js">
-      To view this video please enable JavaScript, and consider upgrading to a web browser that
-      <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>.
-    </p>
-  </video>
+  <!-- Video.js Player with HLS Stream -->
+  <div class="video-container">
+    <video id="my-player" class="video-js vjs-custom-skin" controls preload="auto" width="640" height="264" poster="https://via.placeholder.com/640x264.png" data-setup="{}">
+      <!-- Your HLS Stream URL goes here -->
+      <source src="https://path-to-your-hls-stream/stream.m3u8" type="application/x-mpegURL" />
+      
+      <!-- Fallback text for no JavaScript -->
+      <p class="vjs-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a web browser that
+        <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>.
+      </p>
+    </video>
+  </div>
 
   <!-- Video.js Initialization Script -->
   <script>
@@ -54,7 +76,7 @@
       muted: false
     });
 
-    // Example of adding a custom event listener
+    // Example: Adding a custom event listener
     player.on('ended', function() {
       console.log('The video has finished playing.');
     });
